# ai-agent-and-db

./: .gitignore  README.md  environment.yml  llm_raw_server.py  llm_server.py  main.py  pyproject.toml
src/: CONSIDERATIONS.md  LEARNINGS.md  llm_server.py  main.py
src/embeddings/: embedder.py
src/search/: query.py
src/storage/: chroma_store.py  faiss_index.py
src/utils/: file_loader.py  transformers.py
